Fixed spacing of multi-select component

--- a/packages/lesswrong/styles/_forms.scss
+++ b/packages/lesswrong/styles/_forms.scss
@@ -176,7 +176,7 @@ div.ReactTags__suggestions mark{
 .multi-select-buttons-button {
   border-radius: 0px !important;
   text-transform: none !important;
-  min-width: 65px !important;
+  min-width: 63px !important;
 }
 
 .multi-select-buttons-label {
